2010-06-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/LogView.cs:
	* MonoDevelop.VersionControl.Views/BlameView.cs:
	* MonoDevelop.VersionControl.Views/ComparisonView.cs:
	* MonoDevelop.VersionControl/VersionControlNodeExtension.cs:
	  Worked on version control GUI.

2010-06-29  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* VersionControl.addin.xml:
	* MonoDevelop.VersionControl.csproj:
	* MonoDevelop.VersionControl/Repository.cs:
	* MonoDevelop.VersionControl.Views/LogView.cs:
	* MonoDevelop.VersionControl/AnnotateCommand.cs:
	* MonoDevelop.VersionControl.Views/BlameView.cs:
	* MonoDevelop.VersionControl/UnknownRepository.cs:
	* MonoDevelop.VersionControl.Views/BlameWidget.cs:
	* MonoDevelop.VersionControl.Views/AnnotateView.cs:
	* MonoDevelop.VersionControl.Views/ComparisonView.cs:
	* MonoDevelop.VersionControl/VersionControlService.cs:
	* MonoDevelop.VersionControl.Views/ComparisonWidget.cs:
	* MonoDevelop.VersionControl/VersionControlNodeExtension.cs:
	* MonoDevelop.VersionControl.Views/ComparisonWidgetContainer.cs:
	* gtk-gui/MonoDevelop.VersionControl.Views.ComparisonWidgetContainer.cs:
	  Worked on version control gui.

2010-06-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.VersionControl/Task.cs: Don't bring the VCS
	  monitor to the front.

2010-06-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/AnnotateView.cs: Fixed 'Bug
	  610257 - Text editor does not redraw after toggling
	  annotations'.

2010-06-01  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl.Views/AnnotateView.cs: Fix bug
	  #610262 - After hiding annotations they still refresh on
	  save.

2010-05-31  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/AnnotateView.cs: Added
	  missing string to translation.

2010-05-31  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Views/AnnotateView.cs: Fixed 'Bug