@@ -1,5 +1,10 @@
 2010-06-30  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.VersionControl.Views/BlameWidget.cs: Worked on
+	  blame widget.
+
+2010-06-30  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.VersionControl.Views/LogView.cs:
 	* MonoDevelop.VersionControl.Views/BlameView.cs:
 	* MonoDevelop.VersionControl.Views/ComparisonView.cs:
